Finishing touches Smilei implementation

--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -136,9 +136,9 @@
 %%%%% ABSTRACT SEPARATE
 % This is used to create the separate, one-page abstract that you are required to hand into the Exam
 % Schools.  You can comment it out to generate a PDF for printing or whatnot.
-\begin{abstractseparate}
-	\input{text/abstract} % Create an abstract.tex file in the 'text' folder for your abstract.
-\end{abstractseparate}
+%\begin{abstractseparate}
+%	\input{text/abstract} % Create an abstract.tex file in the 'text' folder for your abstract.
+%\end{abstractseparate}
 
 
 % JEM: Pages are roman numbered from here, though page numbers are invisible until ToC.  This is in
@@ -216,10 +216,10 @@
 %%%%% REFERENCES
 
 % JEM: Quote for the top of references (just like a chapter quote if you're using them).  Comment to skip.
-\begin{savequote}[8cm]
-The first kind of intellectual and artistic personality belongs to the hedgehogs, the second to the foxes \dots
-  \qauthor{--- Sir Isaiah Berlin \cite{berlin_hedgehog_2013}}
-\end{savequote}
+%\begin{savequote}[8cm]
+%The first kind of intellectual and artistic personality belongs to the hedgehogs, the second to the foxes \dots
+%  \qauthor{--- Sir Isaiah Berlin \cite{berlin_hedgehog_2013}}
+%\end{savequote}
 
 \setlength{\baselineskip}{0pt} % JEM: Single-space References
 
