--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -503,6 +503,14 @@ Doubtless, the advent of next generation exa-watt scale lasers and the ability t
 
 Discuss region of BW pair projection maximisation and where we expect saturation.
 
+ Linear Breit-Wheeler can safely be neglected, as there is simply not enough energy in the system. For two interacting photons of energy $E_1$, $E_2$, by consideration of four-momenta, the threshold condition for pair production is 
+\begin{equation}
+	E_1E_2 \ge (m_\mathrm{e}c^2)^2.
+\end{equation}
+For a near-infrared laser photon of energy $\hbar \omega_\mathrm{L}$, the interacting photon must have an energy in excess of 200 GeV. Despite the extreme acceleration gradients considered in this thesis, the Zero Vector Potential mechanism discussed in detail in the following chapter for the explored parameter space, photons of energies no greater than 10 GeV can be expected and thus linear Breit-Wheeler is suppressed.
+
+He \textit{et al} \cite{heSinglelaserSchemeObservation2021} identified an alternative mechanism for linear \ac{BW} using solid density targets, where forwards- and back-scattered high energy radiation reaction produced photons interact within a hollowed out plasma channel. In the geometry of interest in this thesis, while photons are produced in both directions, their production is localised to the plasma surface and at no points do their paths cross and thus this mechanism does not occur.
+
 % TODO: Explore transition regions, do MORE simulations to fill in the gaps.
 
 
