--- a/text/chx-misc.tex
+++ b/text/chx-misc.tex
@@ -19,6 +19,9 @@
 	\item smieli performance plot
 	\item A collisionless fully ionised plasma
 	\item Basic derivation of the Schwinger limit
+	\item Calculating collision frequency
+	\item Feynmann diagrams
+	\item Add some detail of vectorisation
 \end{enumerate}
 
 On the ZVP front
