--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -401,28 +401,13 @@ The strength of the effect is dependent on the Lorentz invariant photon quantum 
 
 % TODO \textbf{Perhaps include feynmann diagrams, see what savin did.}
 
-The aforementioned QED processes of Inverse Compton scattering and non-linear Breit-Wheeler pair production are included in the simulations presented in this thesis using the built-in Smilei packages \cite{derouillatSmileiCollaborativeOpensource2018}. Linear Breit-Wheeler can safely be neglected, as there is simply not enough energy in the system. For two interacting photons of energy $E_1$, $E_2$, by consideration of four-momenta, the threshold condition for pair production is 
-\begin{equation}
-	E_1E_2 \ge (m_\mathrm{e}c^2)^2.
-\end{equation}
-For a near-infrared laser photon of energy $\hbar \omega_\mathrm{L}$, the interacting photon must have an energy in excess of 200 GeV. Despite the extreme acceleration gradients considered in this thesis, the Zero Vector Potential mechanism discussed in detail in the following chapter for the explored parameter space, photons of energies no greater than 10 GeV can be expected and thus linear Breit-Wheeler is suppressed.
-
-He \textit{et al} \cite{heSinglelaserSchemeObservation2021} identified an alternative mechanism for linear \ac{BW} using solid density targets, where forwards- and back-scattered high energy radiation reaction produced photons interact within a hollowed out plasma channel. In the geometry of interest in this thesis, while photons are produced in both directions, their production is localised to the plasma surface and at no points do their paths cross and thus this mechanism does not occur.
-
 \section{Simulating the interaction}
 Modelling laser-plasma interactions is a notoriously challenging endeavour; due to the complexity of the many-bodied systems involved (a fully ionised centimetre cubed block of plastic contains on the order of $10^23$ particles) and the stochasticity of particle motion, it is frequently impossible to construct models \textit{ab initio}. Instead, hydrodynamic simulation codes such as HYADES \cite{larsenHYADESPlasmaHydrodynamics1994} and FLASH \cite{fryxellFLASHAdaptiveMesh2000} and Particle-In-Cell simulation codes such as Smilei \cite{derouillatSmileiCollaborativeOpensource2018}, Osiris \cite{fonsecaOSIRISThreeDimensionalFully2002} and EPOCH \cite{bennett2017users} are used to construct phenomenological models and to direct experimentation. 
-
 
 \subsection{Supercomputing resources}\label{sec:intro-archer}
 Modern \ac{HPC} systems are poised to enter the exascale regime ($> 10^{18}$ Floating Point Operations Per Second). With limited improvements in microprocessor technologies, such power is achieved through massive parallelisation across processing units. To enable the study of the dynamics of up to billions of macroparticles, PIC codes test the limits of current supercomputing architectures. ARCHER2, the UK's national supercomputer came online in November 2021, with it delivering over ten times the reseources of its predecessor (ARCHER) \cite{ARCHER2}. An HPE Cray EX supercomputing system with a peak performance estimated at \qty{28}{Pflops.s^{-1}} across 5860 nodes each with dual AMD EPYCTM 7742 64-core processor for a total of 750,080 cores, ARCHER2 was able to supply the resources required to run the costly PIC simulations for this research. The substantially cheaper HYADES simulations were performed using the Rutherford Appleton Laboratory's SCARF \ac{HPC} cluster \cite{SCARFOverview}.
 
 \subsection{Particle-In-Cell codes}
-% TODO 
-PIC code errors
-Citations
-QED
-ZVP errors.
-
 
 \subsubsection{Discretisation of the Vlasov-Maxwell equations}
 Finding numerical solutions to the Vlasov-Maxwell equations is no straightforward task, while codes exist that are capable, such as Valis \cite{sircombeVALISSplitconservativeScheme2009}, the requirement of high resolution in both position and momentum is exceedingly costly and the use of such codes is limited with respect to their size, duration and spatial dimensions. A more tractable approach is to discretise the distribution function into $N_s$ \textit{quasi-particles}\footnote{Originally introduced by Langdon and Birdsall as \textit{clouds} \cite{langdonTheoryPlasmaSimulation1970}.} . These are often referred to as \textit{macro-particles} in practice and typically represent a large number of real particles, such that
@@ -472,11 +457,10 @@ Given the broad range of magnitudes linked to multi-petawatt and femtosecond las
 \end{center}
 \end{table}
 
-\subsubsection{General simulation parameters}\label{sec:intro-general_simulation_paramers}
-\textbf{Boundary conditions}
-\textit{Silver-M$\ddot{u}$ller }boundary conditions for the simulation box edges \textbf{cite - H Barucq Asymptomatic analysis 1997}. These are able to absorp and inject electromagnetic waves and particles. Note that there can be non-physical reflection of electromagnetic waves at such boundaries leading to error.
+\subsubsection{Simulation parameters}\label{sec:intro-general_simulation_paramers}
+\textit{Silver-M$\ddot{u}$ller} boundary conditions for the simulation box edges \cite{barucqAsymptoticBehaviorSolutions1997} are able to absorb and inject electromagnetic waves and particles. Note that there can be non-physical reflection of electromagnetic waves at such boundaries leading to some error.
 
-\textbf{Shape function} The quasi-particle shape function $S(\mathbf{x})$ describes how to project charge onto the grid. It is symmetric in all dimensions with respect to $\mathbf{x}$ and extends over $n$ cells of width $\Delta x$ in each direction where $n$ is the interpolation order. It can be written as a product across $D$ dimensions,
+The quasi-particle shape function $S(\mathbf{x})$ detemines the projection of particle charge onto the grid. It is symmetric in all dimensions with respect to $\mathbf{x}$ and extends over $n$ cells of width $\Delta x$ in each direction where $n$ is the interpolation order. It can be written as a product across $D$ dimensions,
 \begin{equation}
 	S(\mathbf{x}) = \Pi^D_{\mu = 1}s^{(n)}(x^\mu).
 \end{equation}
@@ -499,6 +483,8 @@ Smilei implements orders 2, 3 and 4, the explicit shape functions are
 	\end{cases} 
 	\end{align}
 \end{subequations}
+
+While the correct implementation of collisions in PIC codes remains an open problem \cite{Collisions}, Smilei has implemented relativistic binary collisions between macroparticles using a Monte-Carlo based scheme \cite{perezImprovedModelingRelativistic2012}. The aforementioned QED processes of Inverse Compton scattering and non-linear Breit-Wheeler pair production are included using the built-in Smilei packages \cite{derouillatSmileiCollaborativeOpensource2018}. These processes can lead to cascades of many particles being added to the simulations. Macroparticle merging can increase simulation efficiency and reduce the memory footprint. Smilei implements such a scheme, inspired by that designed by Vranic \textit{et al} \cite{vranicParticleMergingAlgorithm2015}, that is computationally efficient and conserves energy, momentum and charge within a cell. While Smilei contains modules to handle ionisation, with reference to figure \ref{fig:intro_lasersystems} these are deemed unnecessary for the laser intensities considered in this thesis.
 
 \subsubsection{Parallelisation in practice}
 In the following discussion, where differences in language occur, objects are given as their ARCHER2 (Smilei) names. The Smilei simulation box consists of a grid of cells as in figure \ref{fig:introsmileiparallelisation}.
@@ -548,19 +534,14 @@ where $n_\mathrm{macro}$ is the macroparticle density \cite{birdsall2004plasma}.
 \end{equation}
 failure to do so may cause plasma self-heating until the Debye length matches the cell size \cite{birdsall2004plasma}. Interestingly, Brackbill \textit{et al} \cite{brackbillEnergyMomentumConservation2016} observed in their simulations that setting $\lambda_\mathrm{D}/\Delta x =1$ was most effective at reducing spurious heating. Arber \textit{et al} \cite{arberContemporaryParticleincellApproach2015} performed extensive simulations exploring this instability. If the Debye length is not resolved, after an initial period of rapid self-heating, the temperature increases linearly and can be modelled as
 \begin{equation}\label{eq:intro-selfheating}
-	\frac{\mathrm{d} T_\mathrm{eV}{\mathrm{d}t_\mathrm{ps}} = \alpha_\mathrm{H} \frac{n^{3/2}_{23} \Delta x^2_\mathrm{nm}}{N_\mathrm{ppc}},
+	\frac{\mathrm{d} T_\mathrm{eV}}{\mathrm{d}t_\mathrm{ps}} = \alpha_\mathrm{H} \frac{n^{3/2}_{23} \Delta x^2_\mathrm{nm}}{N_\mathrm{ppc}},
 \end{equation}
-where $T_\mathrm{eV}$ is the temperature in electron volts, $t_\mathrm{ps}$ is the time in picoseconds, $n$ is the plasma electron number density in units of \qty{10^{23}}{cm^{-3}}, $\Delta x_\mathrm{nm}$ is the cell size in nanometres and $N_\mathrm{ppc}$ is the number of macroparticles per cell with $\alpha_\mathrm{H}$, the heating coefficient, determined from their simulations. For a top-hat macroparticle shape function they found $\alpha_\mathrm{H} = 3000$ with an order of magnitude reduction for every increase in order of the shape function and further improvements from using current smoothing techniques. Note that the heating curves are roughly self similar at all points and thus while equation \ref{eq:intro-selfheating} was established in the linear regime only, its scalings remain useful to compare simulations at all times.
+where $T_\mathrm{eV}$ is the temperature in electron volts, $t_\mathrm{ps}$ is the time in picoseconds, $n$ is the plasma electron number density in units of $10^{23}$ \unit{cm^{-3}}, $\Delta x_\mathrm{nm}$ is the cell size in nanometres and $N_\mathrm{ppc}$ is the number of macroparticles per cell with $\alpha_\mathrm{H}$, the heating coefficient, determined from their simulations. For a top-hat macroparticle shape function they found $\alpha_\mathrm{H} = 3000$ with an order of magnitude reduction for every increase in order of the shape function and further improvements from using current smoothing techniques. Note that the heating curves are roughly self similar at all points and thus while equation \ref{eq:intro-selfheating} was established in the linear regime only, its scalings remain useful to compare simulations at all times.
 
 The final instabililty that shall be discussed is the \textit{finite grid instability}. This is the aliasing error associated with particles properties being deposited at grid points. Is most catastrophic for cold drifting plasmas and depends on the \textit{beam Debye length},
 \begin{equation}
 	B = \frac{u}{\omega_p \Delta x},
 \end{equation}
 where $u$ is the beam speed. While their theory predicts stability for $B > 0.25$, Brackbill \textit{et al} \cite{brackbillEnergyMomentumConservation2016} observed instability growth for all beam temperatures in their simulations, although they found the percentage error is a small fraction for $B>10$.
-
-
-
-% TODO \textbf{Other considerations:(At some point list all the other sources of potential error, including ignoring ionisation, ionisation states, collisions.)}
-
 
 % TODO: \textbf{INTRO CONCLUSION}
