--- a/references.bib
+++ b/references.bib
@@ -238,6 +238,20 @@
   file = {/Users/robintimmis/Zotero/storage/EVWYYZTY/2011_baeva_ZVP.pdf}
 }
 
+@article{barucqAsymptoticBehaviorSolutions1997,
+  title = {Asymptotic Behavior of Solutions to {{Maxwell}}'s System in Bounded Domains with Absorbing {{Silver}}–{{Müller}}'s Condition on the Exterior Boundary},
+  author = {Barucq, H. and Hanouzet, B.},
+  date = {1997},
+  journaltitle = {Asymptotic Analysis},
+  volume = {15},
+  number = {1},
+  pages = {25--40},
+  issn = {09217134},
+  doi = {10.3233/ASY-1997-15102},
+  url = {https://www.medra.org/servlet/aliasResolver?alias=iospress&doi=10.3233/ASY-1997-15102},
+  urldate = {2023-10-03}
+}
+
 @article{bataniPhysicsIssuesShock2014,
   title = {Physics Issues for Shock Ignition},
   author = {Batani, D. and Baton, S. and Casner, A. and Depierreux, S. and Hohenberger, M. and Klimo, O. and Koenig, M. and Labaune, C. and Ribeyre, X. and Rousseaux, C. and Schurtz, G. and Theobald, W. and Tikhonchuk, V.T.},
@@ -309,6 +323,13 @@
   url = {https://iopscience.iop.org/article/10.1088/1367-2630/14/6/065005},
   urldate = {2023-09-20},
   file = {/Users/robintimmis/Zotero/storage/JGF8IZE8/Bierbach et al. - 2012 - Generation of 10 μ W relativistic surface h.pdf}
+}
+
+@book{birdsall2004plasma,
+  title = {Plasma Physics via Computer Simulation},
+  author = {Birdsall, Charles K and Langdon, A Bruce},
+  date = {2004},
+  publisher = {{CRC press}}
 }
 
 @article{birdsallParticleincellChargedparticleSimulations1991,
@@ -624,6 +645,12 @@
   file = {/Users/robintimmis/Zotero/storage/L3C3WA2M/Cole et al. - 2015 - Laser-wakefield accelerators as hard x-ray sources.pdf}
 }
 
+@online{Collisions,
+  title = {Collisions},
+  url = {https://osiris-code.github.io/osiris/reference/collisions},
+  organization = {{OSIRIS Reference guide}}
+}
+
 @article{cordeFemtosecondRaysLaserplasma2013,
   title = {Femtosecond x Rays from Laser-Plasma Accelerators},
   author = {Corde, S. and Ta Phuoc, K. and Lambert, G. and Fitour, R. and Malka, V. and Rousse, A. and Beck, A. and Lefebvre, E.},
@@ -690,6 +717,20 @@
   urldate = {2023-09-21},
   langid = {english},
   file = {/Users/robintimmis/Zotero/storage/VQI69UQF/Dawson - 1983 - Particle simulation of plasmas.pdf}
+}
+
+@book{demouraCourantFriedrichsLewy2013,
+  title = {The {{Courant}}–{{Friedrichs}}–{{Lewy}} ({{CFL}}) {{Condition}}: 80 {{Years After Its Discovery}}},
+  shorttitle = {The {{Courant}}–{{Friedrichs}}–{{Lewy}} ({{CFL}}) {{Condition}}},
+  editor = {De Moura, Carlos A. and Kubrusly, Carlos S.},
+  date = {2013},
+  publisher = {{Birkhäuser Boston}},
+  location = {{Boston}},
+  doi = {10.1007/978-0-8176-8394-8},
+  url = {https://link.springer.com/10.1007/978-0-8176-8394-8},
+  urldate = {2023-10-03},
+  isbn = {978-0-8176-8393-1 978-0-8176-8394-8},
+  langid = {english}
 }
 
 @article{derbruggeEnhancedRelativisticHarmonics2010,
@@ -1436,6 +1477,22 @@
   url = {https://opg.optica.org/abstract.cfm?URI=ol-34-16-2459},
   urldate = {2023-09-20},
   langid = {english}
+}
+
+@article{heSinglelaserSchemeObservation2021,
+  title = {A Single-Laser Scheme for Observation of Linear {{Breit}}–{{Wheeler}} Electron–Positron Pair Creation},
+  author = {He, Y and Yeh, I-L and Blackburn, T G and Arefiev, A},
+  date = {2021-11-01},
+  journaltitle = {New Journal of Physics},
+  shortjournal = {New J. Phys.},
+  volume = {23},
+  number = {11},
+  pages = {115005},
+  issn = {1367-2630},
+  doi = {10.1088/1367-2630/ac3049},
+  url = {https://iopscience.iop.org/article/10.1088/1367-2630/ac3049},
+  urldate = {2023-10-02},
+  file = {/Users/robintimmis/Zotero/storage/ZDJDJ65B/He et al. - 2021 - A single-laser scheme for observation of linear Br.pdf}
 }
 
 @online{HighResolutionBremsstrahlung,
@@ -2376,6 +2433,22 @@
   file = {/Users/robintimmis/Zotero/storage/KGF5KHZE/Oh et al. - 2013 - Intense terahertz generation in two-color laser fi.pdf}
 }
 
+@article{okudaCollisionsPlasmaFiniteSize1970,
+  title = {Collisions in a {{Plasma}} of {{Finite-Size Particles}}},
+  author = {Okuda, Hideo and Birdsall, Charles K.},
+  date = {1970-08-01},
+  journaltitle = {The Physics of Fluids},
+  volume = {13},
+  number = {8},
+  pages = {2123--2134},
+  issn = {0031-9171},
+  doi = {10.1063/1.1693210},
+  url = {https://pubs.aip.org/pfl/article/13/8/2123/942392/Collisions-in-a-Plasma-of-Finite-Size-Particles},
+  urldate = {2023-10-03},
+  abstract = {Collisions in one-, two-, and three-dimensional plasmas of finite-size particles, clouds, are studied from two different points of view. The first approach starts from the dynamics of binary collisions and proceeds to obtain the interaction force between two clouds including the effect of static shielding which is then used to obtain the scattering cross section. The calculation shows that cloud cross sections are reduced by orders of magnitude compared with those of point particles as the cloud radius is made comparable to the Debye length. The second approach makes use of the kinetic equations of Balescu-Lenard and Landau from which the Fokker-Planck coefficients for a test cloud in an equilibrium plasma are calculated. It is shown that the Fokker-Planck coefficients for clouds also become considerably smaller than those for point particles when the cloud radius becomes comparable to the Debye length; in addition, the velocity dependence of the coefficients for thick clouds are different from those for point particles. As an application, it is shown that the high collision frequencies encountered in computer plasma simulation (ND too small by normal plasma criteria) can be greatly reduced by use of clouds of radius comparable to the Debye length.},
+  langid = {english}
+}
+
 @online{OMEGAFacility,
   title = {{{OMEGA Facility}}},
   url = {Lle.rochester.edu/omega facility},
@@ -2422,6 +2495,22 @@
   abstract = {A method for measuring the intensity of focused high-power laser pulses based on numerical simulation of high-harmonic generation in the laser peeler regime is proposed. The dependence of the efficiency of high-harmonic generation on the laser pulse intensity and the spatial parameters during interaction with solid targets is studied numerically. The simulation clearly shows that the amplitude of the generated harmonics depends on the laser pulse parameters. The proposed method is simpler than similar intensity measurement techniques and does not require complex preparation.},
   langid = {english},
   file = {/Users/robintimmis/Zotero/storage/ZIR89PAU/Perevalov et al. - 2023 - Laser peeler regime of high-harmonic generation fo.pdf}
+}
+
+@article{perezImprovedModelingRelativistic2012,
+  title = {Improved Modeling of Relativistic Collisions and Collisional Ionization in Particle-in-Cell Codes},
+  author = {Pérez, F. and Gremillet, L. and Decoster, A. and Drouin, M. and Lefebvre, E.},
+  date = {2012-08-01},
+  journaltitle = {Physics of Plasmas},
+  volume = {19},
+  number = {8},
+  pages = {083104},
+  issn = {1070-664X, 1089-7674},
+  doi = {10.1063/1.4742167},
+  url = {https://pubs.aip.org/pop/article/19/8/083104/108747/Improved-modeling-of-relativistic-collisions-and},
+  urldate = {2023-10-03},
+  abstract = {An improved Monte Carlo collisional scheme modeling both elastic and inelastic interactions has been implemented into the particle-in-cell code CALDER [E. Lefebvre et al., Nucl. Fusion 43, 629 (2003)]. Based on the technique proposed by Nanbu and Yonemura [J. Comput. Phys. 145, 639 (1998)] allowing to handle arbitrarily weighted macro-particles, this binary collision scheme uses a more compact and accurate relativistic formulation than the algorithm recently worked out by Sentoku and Kemp [J. Comput. Phys. 227, 6846 (2008)]. Our scheme is validated through several test cases, demonstrating, in particular, its capability of modeling the electrical resistivity and stopping power of a solid-density plasma over a broad parameter range. A relativistic collisional ionization scheme is developed within the same framework, and tested in several physical scenarios. Finally, our scheme is applied in a set of integrated particle-in-cell simulations of laser-driven fast electron transport.},
+  langid = {english}
 }
 
 @unpublished{pingProgressHEPSProject2020,
@@ -3370,6 +3459,22 @@
   doi = {10.1038/ncomms4403},
   abstract = {The advent of ultrahigh-power femtosecond lasers creates a need for an entirely new class of optical components based on plasmas. The most promising of these are known as plasma mirrors, formed when an intense femtosecond laser ionizes a solid surface. These mirrors specularly reflect the main part of a laser pulse and can be used as active optical elements to manipulate its temporal and spatial properties. Unfortunately, the considerable pressures exerted by the laser can deform the mirror surface, unfavourably affecting the reflected beam and complicating, or even preventing, the use of plasma mirrors at ultrahigh intensities. Here we derive a simple analytical model of the basic physics involved in laser-induced deformation of a plasma mirror. We validate this model numerically and experimentally, and use it to show how such deformation might be mitigated by appropriate control of the laser phase. © 2014 Macmillan Publishers Limited. All rights reserved.},
   file = {/Users/robintimmis/Zotero/storage/9KAN2KSJ/ncomms4403.pdf}
+}
+
+@article{vranicParticleMergingAlgorithm2015,
+  title = {Particle Merging Algorithm for {{PIC}} Codes},
+  author = {Vranic, M. and Grismayer, T. and Martins, J.L. and Fonseca, R.A. and Silva, L.O.},
+  date = {2015-06},
+  journaltitle = {Computer Physics Communications},
+  shortjournal = {Computer Physics Communications},
+  volume = {191},
+  pages = {65--73},
+  issn = {00104655},
+  doi = {10.1016/j.cpc.2015.01.020},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0010465515000405},
+  urldate = {2023-10-03},
+  langid = {english},
+  file = {/Users/robintimmis/Zotero/storage/345DFLSX/Vranic et al. - 2015 - Particle merging algorithm for PIC codes.pdf}
 }
 
 @article{wang085PWLaser2017,
