--- a/text/appendix-1.tex
+++ b/text/appendix-1.tex
@@ -1,13 +1,14 @@
-\begin{savequote}[8cm]
-\textlatin{Cor animalium, fundamentum e\longs t vitæ, princeps omnium, Microco\longs mi Sol, a quo omnis vegetatio dependet, vigor omnis \& robur emanat.}
-
-The heart of animals is the foundation of their life, the sovereign of everything within them, the sun of their microcosm, that upon which all growth depends, from which all power proceeds.
-  \qauthor{--- William Harvey \cite{harvey_exercitatio_1628}}
-\end{savequote}
+%\begin{savequote}[8cm]
+%\textlatin{Cor animalium, fundamentum e\longs t vitæ, princeps omnium, Microco\longs mi Sol, a quo omnis vegetatio dependet, vigor omnis \& robur emanat.}
+%
+%The heart of animals is the foundation of their life, the sovereign of everything within them, the sun of their microcosm, that upon which all growth depends, from which all power proceeds.
+%  \qauthor{--- William Harvey \cite{harvey_exercitatio_1628}}
+%\end{savequote}
 
 \chapter{\label{app:1-basics}General plasma physics}
 
 \minitoc
+% TODO: Add simulation parameters
 
 \section{Lorentz transformations of electromagnetic fields}\label{sec:app_lorentzEM}
 The Lorentz transformations for electromagnetic field components parallel, $\parallel$, and perpendicular, $\perp$, to a frame of reference boost of velocity $\mathbf{v}$ are \cite{steaneRelativityMadeRelatively2012}
@@ -46,7 +47,7 @@ A beam\footnote{In this section it is electron beams and not bunches that a refe
 \begin{equation}
 	\rho(\mathbf{x}, \mathbf{p}) = \rho(x,p_x,y,p_y,z,p_z),
 \end{equation}
-where $\mathbf{p} = p_x \hat{\mathbf{x}} +  p_y \hat{\mathbf{y}} +  p_z \hat{\mathbf{z}}$ is the canonical momentum \cite{mcDonald Methods of emittance measurement 122-132 Springer, 1989}. Under the Hamilton formalism, for ideal conditions, the six-dimensional volume of the beam in this space, termed the \textit{emittance}, arises as a conserved quantity and is therefore a useful quantity to describe the beam quality. 
+where $\mathbf{p} = p_x \hat{\mathbf{x}} +  p_y \hat{\mathbf{y}} +  p_z \hat{\mathbf{z}}$ is the canonical momentum \cite{mcDonald Methods of emittance measurement 122-132 Springer1989}. Under the Hamilton formalism, for ideal conditions, the six-dimensional volume of the beam in this space, termed the \textit{emittance}, arises as a conserved quantity and is therefore a useful quantity to describe the beam quality. 
 (something to do with it affecting the ability to focus the beam?? check the papers)
 It is useful to rotate the coordinate system so as to align with the beam's propagation. The distribution can be written as
 \begin{equation}
