--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -31,7 +31,7 @@ We sit on the verge of the exa-scale revolution both in terms of computing \cite
 \begin{figure}
 	\centering
 	\includegraphics[width=\linewidth]{figures/intro/laser_systems}
-	\caption[Laser systems across the globe, both commissioned and theorised.]{A by no means exhaustive plot of laser systems across the globe, both commissioned and theorised \cite{stricklandCompressionAmplifiedChirped1985, fourmauxPedestalCleaningHigh2011, wang085PWLaser2017, tiscarenoOhioStateUniversity2020, sung42PW202017, rossGenerationTerawattPulses2000, yangMultiterawattLaserSystem2002, witte2006source, stoecklHighEnergyPetawattProject2006, lozhkarevCompact56Petawatt2007, herrmannGenerationSubthreecycle162009, andriukaitis90GWPeak2011, zhaoGeneration120GW2013, hoppsOverviewLaserSystems2013, hoppsOverviewLaserSystems2013, thire10MJ5cycle2015, yinHighefficiencyOpticalParametric2016, galesExtremeLightInfrastructure2018, OMEGAFacility, renCompactDoublepassRaman2008, lanciaExperimentalEvidenceShort2010, lanciaSignaturesSelfSimilarRegime2016, marquesJouleLevelHighEfficiencyEnergy2019, thebergeTunableUltrashortLaser2006, trushinSub10fsSupercontinuumRadiation2007, ohIntenseTerahertzGeneration2013, horioGenerationSub17Fs2014, takahashiGeneration10uJCoherent2002, goulielmakisSingleCycleNonlinearOptics2008, skantzakisCoherentContinuumExtreme2009, ferrariHighenergyIsolatedAttosecond2010, takahashiAttosecondNonlinearOptics2013, popmintchevUltravioletSurpriseEfficient2015, nomuraAttosecondPhaseLocking2009, bierbachGeneration10Relativistic2012, heisslerMultimJHarmonicEmission2015, yeungExperimentalObservationAttosecond2017, jahnIntenseIsolatedAttosecond2019, rusEfficientHighbrightnessSoftxray1997, sebbanFullCharacterizationHighgain2000, rusMultimillijouleHighlyCoherent2002, zeitounHighintensityHighlyCoherent2004, wangHighBrightnessInjectionSeededSoftXRayLaser2006, rohringerAtomicInnershellXray2012, ayvazyanFirstOperationFreeelectron2006, ackermannOperationFreeelectronLaser2007, emmaFirstLasingOperation2010, FlashFreeElectronLaser, FlashFreeElectronLaser, FELIXLaboratoryOverview, FELIXLaboratoryOverview, FELIXLaboratoryOverview, kneipObservationSynchrotronRadiation2008, kneipBrightSpatiallyCoherent2010, juEnhancementXraysGenerated2012, chenBrightBetatronXray2013, wangQuasimonoenergeticLaserplasmaAcceleration2013, coleLaserwakefieldAcceleratorsHard2015, wenzQuantitativeXrayPhasecontrast2015, taphuocAllopticalComptonGammaray2012, chenMeVEnergyRaysInverse2013, tsaiCompactTunableCompton2015, polyanskiyPicosecondPulseAmplification2011, haberbergerFifteenTerawattPicosecond2010, glowniaAmplification193nmFemtosecond1992, kandoEnhancementPhotonNumber2009, obenschainHighenergyKryptonFluoride2015, trinesSimulationsEfficientRaman2011, trinesSimulationsEfficientRaman2011, kawanakaConceptualDesignSubexawatt2016, tajimaMarriage20keVSuperconducting2018, NetElectricityConsumption, umstadterRelativisticLaserPlasma2003a, dollarEnhancedLaserAbsorption2017} to provide an overview of the parameter space currently and soon to be accessible. The experimental result obtained at the ORION laser facility \cite{hoppsOverviewLaserSystems2013} is presented, and will be discussed in detail in chapter \ref{ch:3-ORION}. The dashed orange line is the accompanying theoretical prediction. The red dashed line indicates the parameter space accessible via the methods discussed in this thesis when coupled with a sub-etawatt Raman amplified laser beam. Such a beam would provide intensities in the water window many orders of magnitude beyond that currently accessible in state-of-the-art facilities. }
+	\caption[Laser systems across the globe, both commissioned and theorised.]{A by no means exhaustive plot of laser systems across the globe, both commissioned and theorised \cite{stricklandCompressionAmplifiedChirped1985, fourmauxPedestalCleaningHigh2011, wang085PWLaser2017, tiscarenoOhioStateUniversity2020, sung42PW202017, rossGenerationTerawattPulses2000, yangMultiterawattLaserSystem2002, witte2006source, stoecklHighEnergyPetawattProject2006, lozhkarevCompact56Petawatt2007, herrmannGenerationSubthreecycle162009, andriukaitis90GWPeak2011, zhaoGeneration120GW2013, hoppsOverviewLaserSystems2013, hoppsOverviewLaserSystems2013, thire10MJ5cycle2015, yinHighefficiencyOpticalParametric2016, galesExtremeLightInfrastructure2018, OMEGAFacility, renCompactDoublepassRaman2008, lanciaExperimentalEvidenceShort2010, lanciaSignaturesSelfSimilarRegime2016, marquesJouleLevelHighEfficiencyEnergy2019, thebergeTunableUltrashortLaser2006, trushinSub10fsSupercontinuumRadiation2007, ohIntenseTerahertzGeneration2013, horioGenerationSub17Fs2014, takahashiGeneration10uJCoherent2002, goulielmakisSingleCycleNonlinearOptics2008, skantzakisCoherentContinuumExtreme2009, ferrariHighenergyIsolatedAttosecond2010, takahashiAttosecondNonlinearOptics2013, popmintchevUltravioletSurpriseEfficient2015, nomuraAttosecondPhaseLocking2009, bierbachGeneration10Relativistic2012, heisslerMultimJHarmonicEmission2015, yeungExperimentalObservationAttosecond2017, jahnIntenseIsolatedAttosecond2019, rusEfficientHighbrightnessSoftxray1997, sebbanFullCharacterizationHighgain2000, rusMultimillijouleHighlyCoherent2002, zeitounHighintensityHighlyCoherent2004, wangHighBrightnessInjectionSeededSoftXRayLaser2006, rohringerAtomicInnershellXray2012, ayvazyanFirstOperationFreeelectron2006, ackermannOperationFreeelectronLaser2007, emmaFirstLasingOperation2010, FlashFreeElectronLaser, FlashFreeElectronLaser, FELIXLaboratoryOverview, FELIXLaboratoryOverview, FELIXLaboratoryOverview, kneipObservationSynchrotronRadiation2008, kneipBrightSpatiallyCoherent2010, juEnhancementXraysGenerated2012, chenBrightBetatronXray2013, wangQuasimonoenergeticLaserplasmaAcceleration2013, coleLaserwakefieldAcceleratorsHard2015, wenzQuantitativeXrayPhasecontrast2015, taphuocAllopticalComptonGammaray2012, chenMeVEnergyRaysInverse2013, tsaiCompactTunableCompton2015, polyanskiyPicosecondPulseAmplification2011, haberbergerFifteenTerawattPicosecond2010, glowniaAmplification193nmFemtosecond1992, kandoEnhancementPhotonNumber2009, obenschainHighenergyKryptonFluoride2015, trinesSimulationsEfficientRaman2011, trinesSimulationsEfficientRaman2011, kawanakaConceptualDesignSubexawatt2016, tajimaMarriage20keVSuperconducting2018, NetElectricityConsumption, umstadterRelativisticLaserPlasma2003, dollarEnhancedLaserAbsorption2017} to provide an overview of the parameter space currently and soon to be accessible. The experimental result obtained at the ORION laser facility \cite{hoppsOverviewLaserSystems2013} is presented, and will be discussed in detail in chapter \ref{ch:3-ORION}. The dashed orange line is the accompanying theoretical prediction. The red dashed line indicates the parameter space accessible via the methods discussed in this thesis when coupled with a sub-etawatt Raman amplified laser beam. Such a beam would provide intensities in the water window many orders of magnitude beyond that currently accessible in state-of-the-art facilities. }
 	\label{fig:intro_lasersystems}
 \end{figure}
 
@@ -318,7 +318,7 @@ There is also a more physical meaning to the $S$ parameter. Consider again secti
 \begin{equation}
 	\mathbf{F}_\perp = \gamma m_e \mathbf{a}_\perp,
 \end{equation}
-where $ \mathbf{a}_\perp$ is the acceleration perpendicular to the motion and thus the response of the electrons is reduced by a factor of $\gamma$. While some find the \textit{relativistic mass} correction to be somewhat unhelpful nomenclature for the phenomenon \cite{steaneRelativityMadeRelatively2012}, it has nevertheless become commonplace within the literature of relativistic plasma physics \cite{umstadterRelativisticLaserPlasma2003a}. Turning the handle, one finds that the relativistic plasma frequency is
+where $ \mathbf{a}_\perp$ is the acceleration perpendicular to the motion and thus the response of the electrons is reduced by a factor of $\gamma$. While some find the \textit{relativistic mass} correction to be somewhat unhelpful nomenclature for the phenomenon \cite{steaneRelativityMadeRelatively2012}, it has nevertheless become commonplace within the literature of relativistic plasma physics \cite{umstadterRelativisticLaserPlasma2003}. Turning the handle, one finds that the relativistic plasma frequency is
 \begin{equation}
 	\omega_\mathrm{p}^\mathrm{rel} = \sqrt{\frac{e^2n_\mathrm{e}}{\gamma m_\mathrm{e} \epsilon_0}}.
 \end{equation}
@@ -361,7 +361,7 @@ since
 	\frac{\mathrm{d}}{\mathrm{d}t}\left(\frac{\partial L}{\partial \dot{x}_j}\right) = \frac{\partial L}{\partial x_j}.
 \end{equation}
 
-Consider a linearly polarised Gaussian laser pulse, with axis of polarisation along $x$ incident on a solid target at rest. Then $A_x$ is approximately constant along $x$ near the beam centre\footcite{Constant relative to the scale of typical electron trajectories in such an interaction.}. Integrating equation \ref{eq:intro-transverse_momentum_conservation_no_initial_momentum} and noting that initially there is no linear or electromagnetic momentum at the target, the generalised transverse momentum conservation equation for an electron in the laser field is
+Consider a linearly polarised Gaussian laser pulse, with axis of polarisation along $x$ incident on a solid target at rest. Then $A_x$ is approximately constant along $x$ near the beam centre\footnote{Constant relative to the scale of typical electron trajectories in such an interaction.}. Integrating equation \ref{eq:intro-transverse_momentum_conservation_no_initial_momentum} and noting that initially there is no linear or electromagnetic momentum at the target, the generalised transverse momentum conservation equation for an electron in the laser field is
 \begin{equation}\label{eq:intro-transverse_momentum_conservation_no_initial_momentum}
 	p_\mathrm{T} = eA,
 \end{equation}
@@ -522,7 +522,7 @@ and laser pulse electromagnetic field oscillations or higher order harmonics of 
 \end{equation} 
 Note this also ensures that macroparticles are smaller than the wavelengths of the system, a requirement to ensure they mimic real particles \cite{okudaCollisionsPlasmaFiniteSize1970}. Relativistic PIC codes must satisfy the much-acclaimed \cite{demouraCourantFriedrichsLewy2013} Courant-Friedrichs-Lewy condition,
 \begin{equation}
-	\frac{1}{(c\Delta t)^2} > \sqrt{\frac{1}{(\Delta x)^2}+\frac{1}{(\Delta y)^2}+\frac{1}{(\Delta z)^2}},
+	\frac{1}{c\Delta t} > \sqrt{\frac{1}{(\Delta x)^2}+\frac{1}{(\Delta y)^2}+\frac{1}{(\Delta z)^2}},
 \end{equation}
 thus preventing light and relativistic particles from crossing a cell in one timestep and generating numerical Cerenkov radiation \cite{birdsall2004plasma}. As with real plasmas and real particles, to avoid numerical charge fluctuation and ensure collective behaviour of macroparticles,
 \begin{equation}
